--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,4 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -35,4 +28,58 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+
+
+.nav-ul li{
+ display: inline-block;
+ padding: 10px;
+
+
+}
+.nav-ul{
+  padding: 5px;
+  margin: 0;
+  background-color: skyblue;
+}
+
+.nav-ul li a{
+  color: #fff;
+  padding: 5px;
+  text-decoration: none;
+}
+.footer{
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  background-color: skyblue;
+  
+}
+
+.singUp{
+text-align: center;
+}
+.register{
+  margin-left: 30%;
+}
+
+.inputBox{
+  display: block;
+  width: 300px;
+  padding: 7px;
+  margin: 25px;
+  border: 1px solid skyblue
+}
+.appButton{
+  background-color: skyblue;
+  margin: 25px;
+  padding: 10px;
+  width: 150px;
+  border: 1px solid;
+  cursor: pointer;
+
+
 }
