--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,11 @@ text-align: center;
 .register{
   margin-left: 30%;
 }
+.login{
+  margin-top: 100px;
+  margin-left: 35%;
+
+}
 
 .inputBox{
   display: block;
@@ -82,4 +87,7 @@ text-align: center;
   cursor: pointer;
 
 
+}
+.nav-right{
+  text-align: right;
 }
