--- a/src/App.css
+++ b/src/App.css
@@ -91,3 +91,14 @@ text-align: center;
 .nav-right{
   text-align: right;
 }
+
+.add{
+  margin-left:40% ;
+}
+.invalid{
+  color: red;
+  margin-top:-25px;
+  display: block;
+  margin-left: 25px;
+  font-size: 13px;
+}
