--- a/src/App.css
+++ b/src/App.css
@@ -102,3 +102,18 @@ text-align: center;
   margin-left: 25px;
   font-size: 13px;
 }
+.product-list{
+  text-align: center;
+  margin-top:50px ;
+}
+
+.product-list ul li {
+  display: inline-block;
+  border: 1px solid skyblue;
+  padding: 5px;
+  width: 150px;
+}
+
+.product-list ul{
+  margin: 0;
+}
